Replace Java 11 blank checks for Android compatibility